[package]
name = "rust-mempool-sniffer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
